Fix <code> overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -438,7 +438,8 @@ code {
   background: #F1F1F1;
   border: 1px solid #CCCCCC;
   border-radius: 4px;
-  white-space: nowrap; }
+  white-space: nowrap;
+  overflow: auto; }
 
 pre > code {
   display: block;
